[package]
name = "lox-interpreter"
version = "0.1.0"
authors = ["Tucker DiNapoli <T.DiNapoli42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
derive_more = "0.99"
strum = "0.21"
strum_macros = "0.21"